Improve eslint configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,9 @@
     "prefer-regex-literals": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
     "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
+    "simple-import-sort/exports": "error",
+    "no-unused-vars": "warn"
   }
 }
