--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "firebase": "^9.6.1",
+    "graphql": "^16.2.0",
+    "graphql-request": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "realm-web": "^1.5.1",
     "store2": "^2.12.0",
+    "swr": "^1.1.2",
     "typescript": "^4.0.3",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
